--- a/src/index.html
+++ b/src/index.html
@@ -44,28 +44,93 @@
                                           я уже планирую разделять на столбцы-->
           <article class="main__article friends">
             <h2>Friends</h2>
+            <div class="dropdown">
+              <img src="./img/dropboxPNG.png" alt="Dropbox">
+              <div class="dropdown-content">
+                <span class="dropdown-options">First option</span>
+                <span class="dropdown-options">Second option</span>
+                <span class="dropdown-options">Third option</span>
+              </div>
+            </div>
+            <span>271 people</span>
+            <span>+0,7%</span>
           </article>
           <article class="main__article unique">
             <h2>Unique visitors</h2>
+            <div class="dropdown">
+              <img src="./img/dropboxPNG.png" alt="Dropbox">
+              <div class="dropdown-content">
+                <span class="dropdown-options">First option</span>
+                <span class="dropdown-options">Second option</span>
+                <span class="dropdown-options">Third option</span>
+              </div>
+            </div>
+            <span>69 people</span>
+            <span>-1,7%</span>
           </article>
           <article class="main__article">
-            <h2></h2>
+            <h2>Followers</h2>
+            <div class="dropdown">
+              <img src="./img/dropboxPNG.png" alt="Dropbox">
+              <div class="dropdown-content">
+                <span class="dropdown-options">First option</span>
+                <span class="dropdown-options">Second option</span>
+                <span class="dropdown-options">Third option</span>
+              </div>
+            </div>
+            <span>288 people</span>
+            <span>+1%</span>
           </article>
         </div>
         <div>
           <article class="main__article">
-            <h2></h2>
+            <h2>Audience reach</h2>
+            <div>
+              <div>
+                <select name="date" id="" class="date-selection">
+                  <option value="1">31/01/2020 – 06/02/2020</option>
+                  <option value="2">31/01/2020 – 06/02/2020</option>
+                  <option value="3">31/01/2020 – 06/02/2020</option>
+                </select>
+              </div>
+              <label for="" class="checkbox">
+                <input type="checkbox" class="checkbox__input">
+                <span class="checkbox__mark" aria-hidden="true"></span>
+              </label>
+              <label for="" class="checkbox">
+                <input type="checkbox" class="checkbox__input">
+                <span class="checkbox__mark" aria-hidden="true"></span>
+              </label>
+            </div>
+            <img src="./img/graphPNG.png" alt="Graph of attendance">
           </article>
           <article class="main__article">
-            <h2></h2>
+            <h2>Reach by device</h2>
+            <div>
+              <img src="./img/diagramPNG.png" alt="Diagram">
+              <span>Desktop</span>
+              <span>Mobile devices</span>
+            </div>
           </article>
         </div>
         <div>
           <article class="main__article">
-            <h2></h2>
+            <h2>Gender / Age</h2>
+            <span>women</span>
+            <span>men</span>
+            <img src="./img/Group%20126.png" alt="Gender graph">
           </article>
           <article class="main__article">
-            <h2></h2>
+            <h2>Geo</h2>
+            <label>
+              <input type="radio" class="" name="geo">
+              Country
+            </label>
+            <label>
+              <input type="radio" class="" name="geo">
+              City
+            </label>
+            <img src="./img/countryPNG.png" alt="Geo graph">
           </article>
         </div>
       </div>
