--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href='./styles/styles.css' rel="stylesheet">
   <title>TMS Markup</title>
 </head>
@@ -13,12 +16,13 @@
       <div class="menu">
         <img src="./img/vk-logo.svg" class="menu__logo" alt="Vk logo">
         <nav class="menu__navigation">
-          <a href="#"><img src="./img/home-button.svg" alt="Home"></a>
-          <a href="#"><img src="./img/news-button.svg" alt="News"></a>
-          <a href="#"><img src="./img/friend-button.svg" alt="Friends"></a>
-          <a href="#"><img src="./img/messages-button.svg" alt="Messages"></a>
-          <a href="#"><img src="./img/music-button.svg" alt="Music"></a>
-          <a href="#"><img src="./img/statistics-button.svg" alt="Statistics"></a><a href="#"><img src="./img/settings-button.svg" alt="Settings"></a>
+          <a href="#" class="menu__icon icon-home-button"></a>
+          <a href="#" class="menu__icon icon-news-button"></a>
+          <a href="#" class="menu__icon fas fa-user-friends"></a>
+          <a href="#" class="menu__icon fas fa-envelope"></a>
+          <a href="#" class="menu__icon fas fa-play"></a>
+          <a href="#" class="menu__icon act icon-statistics-button"></a>
+          <a href="#" class="menu__icon icon-settings-button"></a>
         </nav>
         <label class="toggle">
           <input type="checkbox" class="toggle__input">
@@ -40,8 +44,6 @@
             <button class="person__avatar"><img src="./img/Avatar.jpg" alt="Your Avatar"></button>
           </div>
         </header>
-        <div class="grid__article ">  <!--Строки с карточками, в свою очередь,
-                                          я уже планирую разделять на столбцы-->
           <article class="main__article friends">
             <h2>Friends</h2>
             <div class="dropdown">
@@ -68,7 +70,7 @@
             <span>69 people</span>
             <span>-1,7%</span>
           </article>
-          <article class="main__article">
+          <article class="main__article followers">
             <h2>Followers</h2>
             <div class="dropdown">
               <img src="./img/dropboxPNG.png" alt="Dropbox">
@@ -81,9 +83,8 @@
             <span>288 people</span>
             <span>+1%</span>
           </article>
-        </div>
-        <div>
-          <article class="main__article">
+
+          <article class="main__article audience">
             <h2>Audience reach</h2>
             <div>
               <div>
@@ -104,7 +105,7 @@
             </div>
             <img src="./img/graphPNG.png" alt="Graph of attendance">
           </article>
-          <article class="main__article">
+          <article class="main__article devices">
             <h2>Reach by device</h2>
             <div>
               <img src="./img/diagramPNG.png" alt="Diagram">
@@ -112,15 +113,14 @@
               <span>Mobile devices</span>
             </div>
           </article>
-        </div>
-        <div>
-          <article class="main__article">
+
+          <article class="main__article gender">
             <h2>Gender / Age</h2>
             <span>women</span>
             <span>men</span>
             <img src="./img/Group%20126.png" alt="Gender graph">
           </article>
-          <article class="main__article">
+          <article class="main__article geo">
             <h2>Geo</h2>
             <label>
               <input type="radio" class="" name="geo">
@@ -132,7 +132,6 @@
             </label>
             <img src="./img/countryPNG.png" alt="Geo graph">
           </article>
-        </div>
       </div>
     </main>
   </div>
