--- a/src/index.html
+++ b/src/index.html
@@ -52,43 +52,55 @@
         </header>
         <div class="grid__row row-2">
           <article class="article friends">
-            <h2>Friends</h2>
-            <div class="dropdown">
-              <img src="./img/dropboxPNG.png" alt="Dropbox">
-              <div class="dropdown-content">
-                <span class="dropdown-options">First option</span>
-                <span class="dropdown-options">Second option</span>
-                <span class="dropdown-options">Third option</span>
+            <div class="container">
+              <h2>Friends</h2>
+              <div class="dropdown">
+                <img src="./img/dropboxPNG.png" alt="Dropbox">
+                <div class="dropdown__content">
+                  <span class="dropdown__options">First option</span>
+                  <span class="dropdown__options">Second option</span>
+                  <span class="dropdown__options">Third option</span>
+                </div>
               </div>
             </div>
-            <span>271 people</span>
-            <span>+0,7%</span>
+            <div class="container">
+              <span>271 people</span>
+              <span>+0,7%</span>
+            </div>
           </article>
           <article class="article unique">
-            <h2>Unique visitors</h2>
-            <div class="dropdown">
-              <img src="./img/dropboxPNG.png" alt="Dropbox">
-              <div class="dropdown-content">
-                <span class="dropdown-options">First option</span>
-                <span class="dropdown-options">Second option</span>
-                <span class="dropdown-options">Third option</span>
+            <div class="container">
+              <h2>Unique visitors</h2>
+              <div class="dropdown">
+                <img src="./img/dropboxPNG.png" alt="Dropbox">
+                <div class="dropdown__content">
+                  <span class="dropdown__options">First option</span>
+                  <span class="dropdown__options">Second option</span>
+                  <span class="dropdown__options">Third option</span>
+                </div>
               </div>
             </div>
-            <span>69 people</span>
-            <span>-1,7%</span>
+            <div class="container">
+              <span>69 people</span>
+              <span>-1,7%</span>
+            </div>
           </article>
           <article class="article followers">
-            <h2>Followers</h2>
-            <div class="dropdown">
-              <img src="./img/dropboxPNG.png" alt="Dropbox">
-              <div class="dropdown-content">
-                <span class="dropdown-options">First option</span>
-                <span class="dropdown-options">Second option</span>
-                <span class="dropdown-options">Third option</span>
+            <div class="container">
+              <h2>Followers</h2>
+              <div class="dropdown">
+                <img src="./img/dropboxPNG.png" alt="Dropbox">
+                <div class="dropdown__content">
+                  <span class="dropdown__options">First option</span>
+                  <span class="dropdown__options">Second option</span>
+                  <span class="dropdown__options">Third option</span>
+                </div>
               </div>
             </div>
-            <span>288 people</span>
-            <span>+1%</span>
+            <div class="container">
+              <span>288 people</span>
+              <span>+1%</span>
+            </div>
           </article>
         </div>
         <div class="grid__row row-3">
