--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
   <div class="page">
     <aside class="page__menu">
       <div class="menu">
-        <img src="./img/vk-logo.svg" class="menu__logo" alt="Vk logo">
+        <input type="checkbox" class="menu-btn" id="menu-btn">
+        <label for="menu-btn" class="menu-icon"><img src="./img/vk-logo.svg" class="menu__logo" alt="Vk logo"></label>
         <nav class="menu__navigation">
           <a href="#" class="menu__icon icon-home-button"></a>
           <a href="#" class="menu__icon icon-news-button"></a>
@@ -31,11 +32,7 @@
       </div>
     </aside>
     <main class="page__main main">
-      <div class="main__grid grid">  <!--Вот здесь главный грид-контейнер, в котором
-                                         я хочу произвести разделение главной странички
-                                         на строки (4 строки - хедер, и три строки, содержащие
-                                         карточки)-->
-        <!--Хотелось бы на занятии снова затронуть тему БЭМ'а на примере нашего второго макета-->
+      <div class="main__grid grid">
         <header class="grid__header header">
           <h1 class="header__heading">Statistics</h1>
           <label class="header__search">
@@ -107,13 +104,13 @@
           <article class="article audience">
             <div class="container">
               <h2>Audience reach</h2>
-              <div>
+
                 <select name="date" id="" class="date-selection">
                   <option value="1">31/01/2020 – 06/02/2020</option>
                   <option value="2">31/01/2020 – 06/02/2020</option>
                   <option value="3">31/01/2020 – 06/02/2020</option>
                 </select>
-              </div>
+
               <label class="checkbox">
                 <input type="checkbox" class="checkbox__input" checked>
                 <span class="checkbox__mark"></span>
@@ -158,7 +155,7 @@
                 </div>
                 <div>
                   <input type="radio" class="radio__input" id="geo2" name="geo">
-                  <label for="geo2" class="label__radio">Country</label>
+                  <label for="geo2" class="label__radio">City</label>
                 </div>
               </div>
             </div>
